fixed clock size on mobile

--- a/imports/ui/Layouts/Mobile/Mobile.scss
+++ b/imports/ui/Layouts/Mobile/Mobile.scss
@@ -91,7 +91,7 @@
 
     .clock {
       width: 46px;
-      font-size: 7vw;
+      font-size: 30px;
       line-height: $navbar-height;
       text-align: right;
     }
